mobile.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
html,
body {
    font-family: "Raleway";
   width:100%;
    margin-left:5px;
    margin-right:5px;
    box-sizing: border-box;
   
}


/* hebergements marseille flexbox */
.hebergementsetPopulaires {
    display: flex;
    box-sizing: border-box;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.hebergements {
    width:100%;
    padding: 10px;
    padding-left: 10px;
    padding-right: 10px;
   
    box-sizing: border-box;
}

.marseille img {
    width:100%;
    height: 110px;
    border-radius:20px 20px 0px 0px;
    object-fit: cover;
    box-sizing: border-box;
}

.marseille p {
    font-size: 14px;
    color: black;
    line-height: 2px;
    padding-left: 10px;
    text-align: left;
}

.marseille h3 {
    color: black;
    padding-left: 10px;
    font-size: 16px;
    text-align: left;
}

.hbg {
    margin-top: 10px;
    margin-right: 10px;
    display: flex;
}


/* hebergements les plus populaire flexbox */
.plusPopulaires {
    background-color: #F2F2F2;
    width:100%;
    padding: 10px;
    padding-left: 10px;
    padding-right: 10px;
    
    box-sizing: border-box;
order:-1;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin-left:1%;
    margin-bottom: 20px;
   
}


.popuTitre,
.afficher {
    
    padding-left: 5%;
}

.activitesTitre,
.hbgtitre {
    min-width: 50%;
    box-sizing: border-box;
    padding-left: 5%;
}

.imageplusPopulaires {
    width:30%;
    height:150px;
    border-radius: 20px 0px 0px 20px;
    object-fit:cover;
    box-sizing:border-box;
    margin-right:10px;
    float: left;
}

.texteplusPopulaires {
    white-space:normal;
    min-width:20%;
    text-align:left;   
}

.hbg {
    font: 12px;
    background-color: white;
    color: black;
    padding: 3px;
    text-align:left;
    border-radius: 20px;
    margin-bottom:2%;
    height: 200px;
    width:25%;
    display:flex;
    justify-content: space-evenly;
    filter: drop-shadow(0 0 0.20rem gray);
}

.blockPopu figcaption {
    font: 12px;
    background-color: white;
    color: black;
    padding:3px;
    height: 150px;
    width:100%;
    margin-bottom:10px;
    display: flex;
    border-radius: 20px;
    filter: drop-shadow(0 0 0.20rem gray)
}


/* activités */

.activites {
    background-color: white;
    margin-top: 10px;
    flex-wrap: wrap;
    width: 100%;
    padding-bottom: 50px;
}

.touslesblocksactivites {
    gap: 2%;
    height: 100%;
    display: flex;
    margin-top: 10px;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.touslesblocksactivites img {
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    flex-wrap: wrap;
    width: 100%;
}

.blockActivites1 img {
    height: 180px;
    width: 100%;
    object-fit: cover;
}

.blockActivites2 img {
    height: 180px;
    width: 100%;
    object-fit: cover;
}

.blockActivites3 img {
    height: 180px;
    width: 100%;
    object-fit: cover;
}

.blockActivites4 img {
    height: 200px;
    width: 100%;
    object-fit: cover;
}

.blockActivites5 img {
    height: 180px;
    width: 100%;
    object-fit: cover;
}

.blockActivites6 img {
    height: 180px;
    width: 100%;
    object-fit: cover;
}

.activites figcaption {
    background-color: white;
    border-radius: 20px;
    padding-top: 4px;
    padding-bottom: 4px;
    padding-top: 0px;
    width: 100%;
    flex-wrap: wrap;
    margin-top: 10px;
    filter: drop-shadow(0 0 0.20rem gray);
    text-align:left;
}

.nomActivites {
    font-weight: bold;margin-left:5px
}

figure {
    display: flex;
    flex-flow: row;
    margin: auto;}
.hbg {
    font: 12px;
    background-color: white;
    color: black;
    padding: 3px;
    text-align: left;
    border-radius: 20px;
    width: 100%;
    padding-left: 4px;
    padding-right: 4px;
    filter: drop-shadow(0 0 0.75rem gray);
}

.blockPopu figcaption {
    font: 12px;
    background-color: white;
    color: black;
    padding: 3px;
    width: 100%;
    text-align: left;
    border-radius: 20px;
    filter: drop-shadow(0 0 0.75rem gray);
}


/* Elements */
.etoiles{font-size: 12px;margin-left:15px;position: absolute;}
.star{font-size: 12px;margin-left:5px;position: absolute;left:140px;bottom:20px}
.recherche {
    display: flex;
}

header {
    display:block;
}

h1 {
    font-size: 17px;
}
.hbg h3 {
    font-size: 16px;text-align: left;
    margin-left: 5px;
   
}
article h3{font-size: 16px;}
article p{ line-height:2px;}

P {
    font-size: 14px;   
}
.hbg p {
    text-align:left;
    font-size: 14px;
    margin-left:5px;
    line-height:2px;;
}

section a {
    text-decoration: none;
    color: black;
}

i {
    text-decoration: black;
}

.fa-star{
    color: #0065FC;
    align-content: left;
    
}


.gray {
    color: gray;
}

.icons,
.fa-info,
.fa-map-marker-alt {
    color: black;
}

.fa-map-marker-alt {
    width: auto;
    height: auto;
    background-color: lightgray;
    padding: 16px;
    border-radius: 20px 0px 0px 20px;
}

h3 {
    font-size: 16px;
}

.headerNavLink,
.headerSignup {
    font-size: 18px;
    margin-right: 20px;
    text-decoration: none;}
    
.headerNavLink{color:black;text-align: center;justify-content: space-evenly;margin-left:20%;width:100%;}

.headerSignup{font-weight: bold;color:#0065FC;position: absolute;top:30px;left:350px;}

a:hover,h3:hover{
    color:#0065fc;
}

.headerNavLink:hover {
    border-bottom: solid 3px #0065fc;
    color: #0065fc;
   
}


.headerNav {
display: flex;
    justify-content:space-evenly;
  }

.barreFiltre,
h2 {
    display: inline-flex;
}

h2 {
    font-size: 18px;
}

.info {
    display: inline-flex;
}

.barreRecherche,
button {
    padding: 12px;
    font-size: 15px;
    border: black 0px solid;
}

button {
    background-color: #0065FC;
    border-radius: 0px 15px 15px 0px;
    color: white;
    font-family: "Raleway", "Sans serif";
    cursor: pointer;
}

.fa-money-bill-wave,
.fa-child,
.fa-heart,
.fa-dog,
.fa-info {
    font-size: 20px;
    margin-left: 5px;
    margin-right: 5px;
    background-color: #DEEBFF;
    border-radius: 50%;
    padding: 8px;
    width: 22px;
    text-align: center;
    color: #0065FC;
}
.fa-info{
    font-size: 16px;
    margin-left: 5px;
    margin-right: 5px;
    background-color: white;
    border-radius: 100%;
    border: 1px solid lightgray;
    padding: 8px;
    width:16px;
    text-align: center;
    color: #0065FC;
}

.titre {
    margin: auto;
    font-weight: bold;
}

.barreFiltre {
    border-style: solid;
    border-radius: 20px 20px 20px 20px;
    border-color: #DEEBFF;
    text-align: center;
    margin: 0px;
    height: auto;
    padding-top: 3px;
    padding-bottom: 3px;
    min-width: 200px;
    max-width: 220px;
}

div.titre {
    margin-right: auto;
    margin-left: auto;
    align-content: center;
}

.nomfiltres {
    font-size: 20px;
}

.barreFiltre {
    display: flex;
    margin-bottom: 5px;
}


/* Footer */

footer {
    background-color: #F2F2F2;
    width:100%;
    height:450px;
    
}

footer a {
    text-decoration: none;
    color: black;
}
.interieurblockFooter{display: flex;flex-direction: column;}
.blockFooter {
    display: flex;
    justify-content: space-evenly;
    font-size: 16px;
    flex-direction: column;
}

